# whup

./: .gitignore  1.cpp  AST.cpp  CMakeLists.txt  LICENSE.md  README.md  assign.cpp  block.cpp  block.h  expression.cpp  expression.h  lexer.cpp  lexer.h  parser.cpp  parser.h  preprocess.cpp  while.cpp  whupc.h
.github/workflows/: cmake-multi-platform.yml
WHUPLib/: cast.whup  math.whup
docs/: 1.cpp  1.md  1.whup  array.md  bb.whup  class.md  consist.md  example.md  grammar.md  oopidea.md  out.hust  structure.md  tac.md  whupvm.md
docs/bench/: prime.cpp  prime.ewhu  prime.js  prime.py  primeSuper.cpp  primeSuper.ewhu  primeSuper.js  primeSuper.py
docs/example/: FibArr.whup  Fibonacci.whup  Fipolacci.whup  Hanoi.whup  bb.whup  bench_100000_assign.whup  bench_100000_if.whup  bench_100000_while.whup  circle-condition.whup  factorial.whup  fib27.ewhu  fib27rec.whup  import.whup  prime.whup  primeSuper.whup  sieve.whup  stack_overflow.whup
include/: WHUPstream.h  arr.h  assign.h  block.h  break.h  cast.h  check.h  class.h  classfunction.h  classtable.h  continue.h  execute.h  expression.h  extractor.h  function.h  generator.h  if.h  lexer.h  object.h  print.h  return.h  var.h  while.h  whup_io.h  whup_parser.h  whupc.h  whupinput.h
include/bits/: if.h  stdc++.h
src/: 1.cpp  WHUPstream.cpp  arr.cpp  assign.cpp  block.cpp  break.cpp  cast.cpp  check.cpp  class.cpp  classfunction.cpp  continue.cpp  execute.alternative.cpp  execute.cpp  expression.cpp  extractor.cpp  function.cpp  generator.cpp  if.cpp  io.cpp  lexer.cpp  object.cpp  parser.cpp  print.cpp  return.cpp  var.cpp  while.cpp  whupc.cpp  whupinput.cpp  whuprun.cpp  whupvm.cpp
